--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "use-position": "0.0.8",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
