--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-notifications": "^1.7.4",
     "react-scripts": "4.0.3",
     "use-position": "0.0.8",
     "web-vitals": "^1.1.1"
